# barnworks-gallery

./: .dockerignore  .gitignore  CODEOWNERS  Dockerfile  INSTALL_ALPHAVOX.bat  LICENSE  README.md  copy-my-photos.bat  docker-compose.yml  index.html
backend/: .gitignore  AlphaVox-Cortex.py  Python_Internet_access.py  action_scheduler.py  activate_voice_cortex.py  adaptive_conversation.py  adaptive_conversation_routes.py  add_footer.py  add_license_headers.py  advanced_learning.py  advanced_markdown_fixer.py  advanced_nlp_service.py  advanced_tts_service.py  aggressive_lint_eliminator.py  ai_learning_engine.py  alpha_interface.py  alpha_security_bridge.py  alphavox.py  alphavox_http.py  alphavox_identity.py  alphavox_input_nlu.py  alphavox_knowledge_engine.py  alphavox_knowledge_expander.py  alphavox_learning_coordinator.py  alphavox_local_reasoning.py  alphavox_module_loader.py  alphavox_production.py  alphavox_speech_module.py  alphavox_temporal.py  alphavox_ui.py  alphavox_ultimate_voice.py  analytics_engine.py  api.py  app.py  app.pyi  app_init.py  audio_pattern_service.py  audio_play.py  audio_processor.py  audio_processor_modules.py  (+195 more)
backend/app/: __init__.py  main.py
backend/christman_ai_revolution_package/: COPY_THIS_ANYWHERE.txt  README.md  launch_revolution.sh
backend/christman_crypto/: __init__.py  kyber.py  postquantum.py
backend/data/: communication_history.json  knowledge_graph.json  learning_log.json  topics.json  user_complexity_profiles.json  user_interactions.json
backend/lstm_models/: emotion_lstm_model.keras  emotion_lstm_model.pkl.json  eye_movement_lstm_model.keras  eye_movement_lstm_model.pkl.json  gesture_lstm_model.keras  gesture_lstm_model.pkl.json
backend/memory/: memory_store.json
backend/scripts/: START_ALPHAVOX_HIPAA.sh  aws_deploy.sh  aws_deploy_test.sh  clear_all_cache.sh  create_revolution_package.sh  demo_script.sh  deploy_aws.sh  deploy_production.sh  deploy_to_ecr.sh  hipaa_launcher.sh  install.sh  launch_christman_ai.sh  setup_stable_voice.sh  start_alphavox.sh  start_server.sh
(+195 files in other folders)
