[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "pygame>=2.6.1",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "anthropic>=0.49.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "openai>=1.75.0",
    "trafilatura>=2.0.0",
    "sounddevice>=0.5.1",
    "web-py>=0.62",
    "scipy>=1.15.2",
    "spacy>=3.8.5",
    "scikit-learn>=1.6.1",
    "beautifulsoup4>=4.13.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.mypy]
exclude = "(^attached_assets/|^attached_assets$)"
